fix text decoration shift on hover

--- a/scss/_base_links.scss
+++ b/scss/_base_links.scss
@@ -22,6 +22,7 @@
     &:hover {
       cursor: pointer;
       text-decoration-thickness: 3px;
+      text-underline-offset: 2px;
     }
 
     &:visited {
